--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </h1>
                 <a
                   href="quote."
-                  class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft"
+                  class="btn btn-contact btn-primary py-md-3 px-md-5 me-3 animated slideInLeft"
                   >Contact Us</a
                 >
                 <!-- <a
