--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
                   <p class="hero-work">
                     Web Design - Web Development - UX Design
                   </p>
-                  <h2 class="hero-title">BEST Template for Agency</h2>
+                  <h2 class="hero-title">#COFFEE -> CODE;</h2>
                   <!-- <p class="hero-sub-title">We Provide Hight Quality Bootstrap Template</p> -->
                   <!-- <a href="#" class="btn btn-default btn-lg left-btn">Purchase Now</a> -->
                   <a href="#" class="btn btn-main btn-lg">Find Out More</a>
