--- a/index.html
+++ b/index.html
@@ -40,13 +40,16 @@
   </head>
 
   <body>
+    <div id="preloader">
+        <div class="line"></div>
+      </div>
     <!-- Spinner Start -->
-    <div
+    <!-- <div
       id="spinner"
       class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
     >
       <div class="spinner"></div>
-    </div>
+    </div> -->
     <!-- Spinner End -->
    
     <!-- Topbar Start -->
@@ -1057,7 +1060,7 @@
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded back-to-top"
       ><i class="bi bi-arrow-up"></i
     ></a>
-
+ 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
