--- a/index.html
+++ b/index.html
@@ -219,7 +219,28 @@
       </div>
     </div>
     <!-- Navbar & Carousel End -->
-
+    <section class="home" id="home" data-stellar-background-ratio="0.4">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="st-home-unit">
+              <div class="hero-txt">
+                <p class="hero-work">
+                  Web Design - Web Development - UX Design
+                </p>
+                <h2 class="hero-title">#COFFEE -> CODE;</h2>
+                <!-- <p class="hero-sub-title">We Provide Hight Quality Bootstrap Template</p> -->
+                <!-- <a href="#" class="btn btn-default btn-lg left-btn">Purchase Now</a> -->
+                <a href="#" class="btn btn-main btn-lg">Find Out More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mouse-icon">
+        <div class="wheel"></div>
+      </div>
+    </section>
 
 
 
@@ -231,7 +252,7 @@
             <div class="section-title position-relative pb-3 mb-5">
               <h5 class="fw-bold text-primary text-uppercase">About Us</h5>
               <h1 class="mb-0">
-                <!-- The Best IT Solution With 10 Years of Experience -->
+                The Best IT Solution With HashtoColon Systems
               </h1>
             </div>
             <p class="mb-4">
@@ -712,28 +733,7 @@
       </div>
     </div>
     <!-- Blog Start -->
-    <section class="home" id="home" data-stellar-background-ratio="0.4">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="st-home-unit">
-                <div class="hero-txt">
-                  <p class="hero-work">
-                    Web Design - Web Development - UX Design
-                  </p>
-                  <h2 class="hero-title">#COFFEE -> CODE;</h2>
-                  <!-- <p class="hero-sub-title">We Provide Hight Quality Bootstrap Template</p> -->
-                  <!-- <a href="#" class="btn btn-default btn-lg left-btn">Purchase Now</a> -->
-                  <a href="#" class="btn btn-main btn-lg">Find Out More</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="mouse-icon">
-          <div class="wheel"></div>
-        </div>
-      </section>
+ 
     <!-- Facts Start -->
     <div class="container-fluid facts py-5 pt-lg-0">
         <div class="container py-5 pt-lg-0">
