--- a/index.html
+++ b/index.html
@@ -868,12 +868,12 @@
           <div class="col-md-4 animated" data-animate="fadeInRight">
             <address>
               <span
-                ><i class="fa fa-map-marker fa-lg"></i> 84 State Road 123 City,
+                ><i class="bi bi-geo-alt-fill text-primary me-2 fa-lg"></i> 84 State Road 123 City,
                 State 24813</span
               >
               <span><i class="fa fa-phone fa-lg"></i> (123) xxx - xxx</span>
               <span
-                ><i class="bi bi-envelope-open text-primary me-2"></i>
+                ><i class="fa fa-envelope text-primary me-2"></i>
                 <a href="mailto:info@hashtocolon.com"
                   >info@hashtocolon.com</a
                 ></span
