--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
     <style>
         .bg-header {
   background: linear-gradient(rgba(9, 30, 62, 0.7), rgba(9, 30, 62, 0.7)),
-    url(../img/carousel-1.jpg) center center no-repeat;
+    url(/img/blogimg/contactus.jpg) center center no-repeat;
   background-size: cover;
 }
     </style>
@@ -131,29 +131,25 @@
                   >Services</a
                 >
                 <div class="dropdown-menu m-0">
-                  <a href="blog." class="dropdown-item">Data Science</a>
-                  <a href="detail." class="dropdown-item">eLearning</a>
-                  <a href="detail." class="dropdown-item">Web Development
+                  <a href="datascience.html" class="dropdown-item">Data Science</a>
+                  <a href="elearning.html" class="dropdown-item">eLearning</a>
+                  <a href="webdevelopement.html" class="dropdown-item">Web Development
                   </a>
-                  <a href="detail." class="dropdown-item">Apps Development
+                  <a href="appdevelopment.html" class="dropdown-item">Apps Development
                   </a>
-                  <a href="detail." class="dropdown-item">Data Analytics
+                  <a href="dataanalytics.html" class="dropdown-item">Data Analytics
                   </a>
-                  <a href="detail." class="dropdown-item">Artificial intelligence
+                  <a href="artificialintelligence.html" class="dropdown-item">Artificial intelligence
                   </a>
-                  <a href="detail." class="dropdown-item">Machine Learning
+                  <a href="machinelearning.html" class="dropdown-item">Machine Learning
                   </a>
-                  <a href="detail." class="dropdown-item">Information Technology
+                  <a href="informationtechnology.html" class="dropdown-item">Information Technology
                   </a>
-                  <a href="detail." class="dropdown-item">Cyber Security
+                  <a href="cybersecurity.html" class="dropdown-item">Cyber Security
                   </a>
-                  <a href="detail." class="dropdown-item">Blockchain Technology
+                  <a href="blockchaintechnology.html" class="dropdown-item">Blockchain Technology
                   </a>
-                  <a href="detail." class="dropdown-item">Digital Marketing
-  
-                  </a>
-                  
-  
+                  <a href="digitalmarketing.html" class="dropdown-item">Digital Marketing</a>
                 </div>
               </div>
              
