--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
     <style>
         .bg-header {
   background: linear-gradient(rgba(9, 30, 62, 0.7), rgba(9, 30, 62, 0.7)),
-    url(../img/carousel-1.jpg) center center no-repeat;
+    url(/img/blogimg/about.jpg) center center no-repeat;
   background-size: cover;
 }
     </style>
@@ -130,29 +130,25 @@
                   >Services</a
                 >
                 <div class="dropdown-menu m-0">
-                  <a href="blog." class="dropdown-item">Data Science</a>
-                  <a href="detail." class="dropdown-item">eLearning</a>
-                  <a href="detail." class="dropdown-item">Web Development
+                  <a href="datascience.html" class="dropdown-item">Data Science</a>
+                  <a href="elearning.html" class="dropdown-item">eLearning</a>
+                  <a href="webdevelopement.html" class="dropdown-item">Web Development
                   </a>
-                  <a href="detail." class="dropdown-item">Apps Development
+                  <a href="appdevelopment.html" class="dropdown-item">Apps Development
                   </a>
-                  <a href="detail." class="dropdown-item">Data Analytics
+                  <a href="dataanalytics.html" class="dropdown-item">Data Analytics
                   </a>
-                  <a href="detail." class="dropdown-item">Artificial intelligence
+                  <a href="artificialintelligence.html" class="dropdown-item">Artificial intelligence
                   </a>
-                  <a href="detail." class="dropdown-item">Machine Learning
+                  <a href="machinelearning.html" class="dropdown-item">Machine Learning
                   </a>
-                  <a href="detail." class="dropdown-item">Information Technology
+                  <a href="informationtechnology.html" class="dropdown-item">Information Technology
                   </a>
-                  <a href="detail." class="dropdown-item">Cyber Security
+                  <a href="cybersecurity.html" class="dropdown-item">Cyber Security
                   </a>
-                  <a href="detail." class="dropdown-item">Blockchain Technology
+                  <a href="blockchaintechnology.html" class="dropdown-item">Blockchain Technology
                   </a>
-                  <a href="detail." class="dropdown-item">Digital Marketing
-  
-                  </a>
-                  
-  
+                  <a href="digitalmarketing.html" class="dropdown-item">Digital Marketing</a>
                 </div>
               </div>
              
@@ -180,7 +176,7 @@
 
 
     <!-- About Start -->
-    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <div class="container-fluid aboutstart py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container py-5">
           <div class="row g-5">
             <div class="col-lg-7">
@@ -237,11 +233,11 @@
             <div class="col-lg-5" style="min-height: 500px">
               <div class="position-relative h-100">
                 <img
-                  class="position-absolute w-100 h-100 rounded wow zoomIn"
-                  data-wow-delay="0.9s"
-                  src="img/about.jpg"
-                  style="object-fit: cover"
-                />
+                class="position-absolute w-100 h-100 rounded wow zoomIn"
+                data-wow-delay="0.9s"
+                src="img/blogimg/pexels-mikhail-fesenko-9553905.jpg"
+                style="object-fit: cover"
+              />
               </div>
             </div>
           </div>
