--- a/datascience.html
+++ b/datascience.html
@@ -192,46 +192,14 @@
                 alt=""
               />
               <h1 class="mb-4">
-                Diam dolor est labore duo ipsum clita sed et lorem tempor duo
-              </h1>
+               HashToColon Data Science Services              </h1>
               <p>
-                Sadipscing labore amet rebum est et justo gubergren. Et eirmod
-                ipsum sit diam ut magna lorem. Nonumy vero labore lorem sanctus
-                rebum et lorem magna kasd, stet amet magna accusam consetetur
-                eirmod. Kasd accusam sit ipsum sadipscing et at at sanctus et.
-                Ipsum sit gubergren dolores et, consetetur justo invidunt at et
-                aliquyam ut et vero clita. Diam sea sea no sed dolores diam
-                nonumy, gubergren sit stet no diam kasd vero.
+                Data science helps identify patterns from raw data and provides insights that are of major use in big business decisions. Today’s businesses have many opportunities with data generated across diverse sources within and outside enterprises. Using data science as a service has never been more useful to businesses. HashToColon offers the most progressive solutions to customers using our enhanced in-house abilities. Our big data consulting and data software development services enable innovation, experimentation with new tools, exploration of new ways of leveraging data, and optimization of big data solutions.
               </p>
-              <p>
-                Voluptua est takimata stet invidunt sed rebum nonumy stet, clita
-                aliquyam dolores vero stet consetetur elitr takimata rebum
-                sanctus. Sit sed accusam stet sit nonumy kasd diam dolores,
-                sanctus lorem kasd duo dolor dolor vero sit et. Labore ipsum duo
-                sanctus amet eos et. Consetetur no sed et aliquyam ipsum justo
-                et, clita lorem sit vero amet amet est dolor elitr, stet et no
-                diam sit. Dolor erat justo dolore sit invidunt.
-              </p>
-              <p>
-                Diam dolor est labore duo invidunt ipsum clita et, sed et lorem
-                voluptua tempor invidunt at est sanctus sanctus. Clita dolores
-                sit kasd diam takimata justo diam lorem sed. Magna amet sed
-                rebum eos. Clita no magna no dolor erat diam tempor rebum
-                consetetur, sanctus labore sed nonumy diam lorem amet eirmod. No
-                at tempor sea diam kasd, takimata ea nonumy elitr sadipscing
-                gubergren erat. Gubergren at lorem invidunt sadipscing rebum sit
-                amet ut ut, voluptua diam dolores at sadipscing stet. Clita
-                dolor amet dolor ipsum vero ea ea eos.
-              </p>
-              <p>
-                Voluptua est takimata stet invidunt sed rebum nonumy stet, clita
-                aliquyam dolores vero stet consetetur elitr takimata rebum
-                sanctus. Sit sed accusam stet sit nonumy kasd diam dolores,
-                sanctus lorem kasd duo dolor dolor vero sit et. Labore ipsum duo
-                sanctus amet eos et. Consetetur no sed et aliquyam ipsum justo
-                et, clita lorem sit vero amet amet est dolor elitr, stet et no
-                diam sit. Dolor erat justo dolore sit invidunt.
-              </p>
+         <p>
+          Data Science improves the business insights your company derives from data. Toptal’s data science services help businesses improve their decision making by employing vast data sets to get actionable insights that augment business value by improving customer experience, churn, and supply chain operations.
+
+         </p>
             </div>
             <!-- Blog Detail End -->
 
