--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                   <i class="fa fa-check text-primary me-3"></i>Web Development
                 </h5>
                 <h5 class="mb-3">
-                  <i class="fa fa-check text-primary me-3"></i> Information Technology (IT)
+                  <i class="fa fa-check text-primary me-3"></i> Information Technology
                 </h5>
                 <h5 class="mb-3">
                   <i class="fa fa-check text-primary me-3"></i>eLearning
