--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
             >
               <div class="p-3" style="max-width: 900px">
                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">
-                  We inspire from technology to inspire the technology
+                 
+                  #We simplify your dreams;
                 </h5>
                 <h1 class="display-1 text-white mb-md-4 animated zoomIn">
                     HASHTOCOLON SYSTEMS
@@ -154,7 +155,7 @@
             >
               <div class="p-3" style="max-width: 900px">
                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">
-                  
+                  We inspire from technology to inspire the technology
                 </h5>
                 <h1 class="display-1 text-white mb-md-4 animated zoomIn">
                   Simple Solutions for Complex Connections.                </h1>
