--- a/about.html
+++ b/about.html
@@ -229,23 +229,19 @@
    
 
     <!-- Vendor Start -->
-    <!-- <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
       <div class="container py-5 mb-5">
         <div class="bg-white">
           <div class="owl-carousel vendor-carousel">
-            <img src="img/vendor-1.jpg" alt="" />
-            <img src="img/vendor-2.jpg" alt="" />
-            <img src="img/vendor-3.jpg" alt="" />
-            <img src="img/vendor-4.jpg" alt="" />
-            <img src="img/vendor-5.jpg" alt="" />
-            <img src="img/vendor-6.jpg" alt="" />
-            <img src="img/vendor-7.jpg" alt="" />
-            <img src="img/vendor-8.jpg" alt="" />
-            <img src="img/vendor-9.jpg" alt="" />
+            <img src="img/clients/project-1.jpg" alt="" />
+            <img src="img/clients/project-2.jpg" alt="" />
+            <img src="img/clients/project-3.jpg" alt="" />
+            <img src="img/clients/project-4.jpg" alt="" />
+            <img src="img/clients/project-5.png" alt="" />
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
     <!-- Vendor End -->
 
     <!-- Footer Start -->
@@ -408,7 +404,6 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
