--- a/careers.html
+++ b/careers.html
@@ -46,7 +46,7 @@
     <style>
         .bg-header {
   background: linear-gradient(rgba(9, 30, 62, 0.7), rgba(9, 30, 62, 0.7)),
-    url(/img/creare2.jpg) center center no-repeat;
+    url(/img/creare2.webp) center center no-repeat;
   background-size: cover;
 }
     </style>
