--- a/contact.html
+++ b/contact.html
@@ -186,6 +186,7 @@
                       type="text"
                       class="form-control"
                       placeholder="Your Name"
+                      name="name"
                     />
                   </div>
                   <div class="col-md-6">
@@ -193,6 +194,7 @@
                       type="email"
                       class="form-control"
                       placeholder="Your Email"
+                      name="email"
                     />
                   </div>
                   <div class="col-md-12">
@@ -200,6 +202,7 @@
                       class="form-control"
                       rows="3"
                       placeholder="Tell Us Everything"
+                      name="message"
                     ></textarea>
                   </div>
                   <div class="col-md-12">
