--- a/applicationsubmited.html
+++ b/applicationsubmited.html
@@ -89,7 +89,7 @@
       </div>
       <div class="_footer">
         <p>Having trouble? <a href="contact.html">Contact us</a></p>
-        <a class="btn" href="">Back to homepage</a>
+        <a class="btn" href="/">Back to homepage</a>
       </div>
     </div>
   </body>
