--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.2s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/datascience1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/datascience1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -316,7 +316,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/da1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/da1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -335,7 +335,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/elearning1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/elearning1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -351,7 +351,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/web.jpg" class="img-fluid" alt="">
+            <img src="/img/service/web.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -368,7 +368,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.2s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/app1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/app1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -386,7 +386,7 @@
 <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/ai1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/ai1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -403,7 +403,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/mi1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/mi1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -420,7 +420,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/it1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/it1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -437,7 +437,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/cyber1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/cyber1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -454,7 +454,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/bc1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/bc1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -471,7 +471,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/dm1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/dm1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
