--- a/contact.html
+++ b/contact.html
@@ -179,7 +179,10 @@
         <div class="container">
           <div class="row">
             <div class="col-md-8 animated" data-animate="fadeInLeft">
-              <form action="#">
+              <form  action="mail.php"
+              method="post"
+              role="form"
+              class="php-email-form">
                 <div class="row">
                   <div class="col-md-6">
                     <input
@@ -217,7 +220,7 @@
                 <span
                   ><i class="bi bi-geo-alt-fill text-primary me-2 fa-lg"></i> #90/2, 13th Cross, 9th Main RR Nagar, Bengalore-98, India</span
                 >
-                <span><i class="fa fa-phone fa-lg"></i> (123) xxx - xxx</span>
+                <span><i class="fa fa-phone fa-lg"></i>+91 9606 75 2050</span>
                 <span
                   ><i class="fa fa-envelope text-primary me-2"></i>
                   <a href="mailto:info@hashtocolon.com"
