--- a/jobapplication.html
+++ b/jobapplication.html
@@ -157,31 +157,31 @@
 <section class="col-lg-8 container mb-5">
 
     <h4>Job Application</h4>
-    <form action="">
+    <form  action="/application.php" method="post" role="form" class="php-email-form " enctype="multipart/form-data">
       <p>Basic Information </p>
       <div class="row">
         <div class="col-md-6 form-group">
-          <input name="name" type="text" class="form-control" placeholder="First Name">
+          <input name="name" type="text" class="form-control" placeholder="First Name" required>
         </div>
         <div class="col-md-6 form-group">
-          <input name="lastname" type="text" class="form-control" placeholder="Last Name">
+          <input name="lastname" type="text" class="form-control" placeholder="Last Name" required>
         </div>
       </div>
       <div class="row">
         <div class="col form-group">
-          <input name="phone" type="tel" class="form-control" placeholder="Your Phone Number">
+          <input name="phone" type="tel" class="form-control" placeholder="Your Phone Number" required>
         </div>
       </div>
       <div class="row">
         <div class="col form-group">
-          <input name="email" type="email" class="form-control" placeholder="Your Email ">
+          <input name="email" type="email" class="form-control" placeholder="Your Email " required>
         </div>
       </div>
 
     
       <div class="row">
         <div class="col form-group">
-          <textarea name="address" class="form-control" placeholder="Your Address"></textarea>
+          <textarea name="address" class="form-control" placeholder="Your Address"></textarea required>
         </div>
       </div>
       <p>Professional Details</p>
@@ -192,23 +192,24 @@
       </div>
       <div class="row">
         <div class="col form-group">
-          <input name="skill" type="text" class="form-control" placeholder="Skill Set">
+          <input name="skill" type="text" class="form-control" placeholder="Skill Set" required>
         </div>
       </div><div class="row">
         <div class="col form-group">
-          <input name="education" type="text" class="form-control" placeholder="Education Details">
+          <input name="education" type="text" class="form-control" placeholder="Education Details" required>
         </div>
       </div><div class="row">
         <div class="col form-group">
-          <input name="experience" type="text" class="form-control" placeholder="Experience Details">
+          <input name="experience" type="text" class="form-control" placeholder="Experience Details" required>
         </div>
       </div>
       <div class="file-input mb-5">
         <input
           type="file"
-          name="fileinput"
+          name="file"
           id="file-input"
           class="file-input__input"
+          required
         />
         <label class="file-input__label" for="file-input">
           <svg
