--- a/service.html
+++ b/service.html
@@ -186,7 +186,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/da1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/da1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -205,7 +205,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/elearning1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/elearning1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -221,7 +221,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/web.jpg" class="img-fluid" alt="">
+            <img src="/img/service/web.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -238,7 +238,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.2s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/app1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/app1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -256,7 +256,7 @@
 <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/ai1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/ai1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -273,7 +273,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/mi1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/mi1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -290,7 +290,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/it1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/it1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -307,7 +307,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/cyber1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/cyber1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -324,7 +324,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/bc1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/bc1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
@@ -341,7 +341,7 @@
       <div class="col-xl-4 col-md-6col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.4s">
         <div class="service-item">
           <div class="img">
-            <img src="/img/service/dm1.jpg" class="img-fluid" alt="">
+            <img src="/img/service/dm1.webp" class="img-fluid" alt="">
           </div>
           <div class="details position-relative">
             <div class="icon">
