--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>HashtoColon #Coffee -> Code;</title>
+    <title>HashtoColon Systems  #Coffee -> Code;</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta name="keywords" content="Web development in bangalore, application development in bangalore, application development, digital markating, search engine optimization, seo, machine learning, web application, websites, ecommerce websites">
+   
+    <meta
+    content="HashtoColon Systems  Web development in bangalore, application development in bangalore, application development, digital markating, search engine optimization, seo, machine learning, web application, websites, ecommerce websites"
+    name="keywords"
+  />
+  <meta
+    content="HashtoColon Systems  Web development in bangalore, application development in bangalore, application development, digital markating, search engine optimization, seo, machine learning, web application, websites, ecommerce websites"
+    name="description"
+  />
+  <meta property="og:url" content="https://hashtocolon.com/img/mylogo.png" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="HashtoColon Systems " />
+<meta property="og:description" content="https://hashtocolon.com" />
+<meta property="og:image" content="http://hashtocolon.com/img/mylogo.png" />
+<meta property="og:image:type" content="image/png" />
     <!-- Favicon -->
     <link href="img/HashToColon.png" rel="icon" />
 
@@ -25,7 +39,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> -->
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
     <link href="lib/animate/animate.min.css" rel="stylesheet" />
@@ -903,10 +917,6 @@
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded back-to-top"
       ><i class="bi bi-arrow-up"></i
     ></a>
- 
- 
-    
-
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
