--- a/index.html
+++ b/index.html
@@ -19,12 +19,21 @@
 <meta property="og:description" content="https://hashtocolon.com" />
 <meta property="og:image" content="http://hashtocolon.com/img/mylogo.png" />
 <meta property="og:image:type" content="image/png" /> -->
-<meta property="og:title" content="HashtoColon Systems" />
+<!-- <meta property="og:title" content="HashtoColon Systems" />
 <meta property="og:url" content="https://hashtocolon.com" />
 <meta property="og:description" content="HashtoColon">
 <meta property="og:image" itemprop="image" content="http://hashtocolon.com/img/mylogo.png"/>
 <meta property="og:type" content="article" />
-<meta property="og:locale" content="en_GB" />
+<meta property="og:locale" content="en_GB" /> -->
+<meta property="og:site_name" content="HashtoColon Systems" />
+    <meta property="og:title" content="HashtoColon Systems">
+    <meta property="og:description" content="HashtoColon Systems  Web development in bangalore, application development in bangalore, application development, digital markating, search engine optimization, seo, machine learning, web application, websites, ecommerce websites"
+    name="description">
+    <meta property="og:image" itemprop="image" content="img/logo.jpg">
+    <link itemprop="thumbnailUrl" href="img/logo.jpg"> 
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:updated_time" content="updatedtime">
+    <meta property="og:locale" content="en_GB" />
     <!-- Favicon -->
     <link href="img/HashToColon.png" rel="icon" />
 
@@ -58,11 +67,10 @@
   </head>
 
   <body>
-    <link itemprop="thumbnailUrl" href="http://hashtocolon.com/img/mylogo.png">
-
-<span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject">
-<link itemprop="url" href="http://hashtocolon.com/img/mylogo.png">
-</span>
+    <span itemprop="image" itemscope itemtype="image/jpeg"> 
+      <link itemprop="url" href="http://hashtocolon.com/img/mylogo.png"> 
+    </span>
+   
     <div id="preloader">
         <div class="line"></div>
       </div>
