--- a/careers.html
+++ b/careers.html
@@ -11,10 +11,11 @@
       content="Web development in bangalore, application development in bangalore, application development, digital markating, search engine optimization, seo, machine learning, web application, websites, ecommerce websites"
     />
     <!-- Favicon -->
-    <link href="img/HashToColon.png" rel="icon" />
-
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon" />
+    <link rel="icon"  href="img/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="manifest" href="img/site.webmanifest">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -354,8 +355,7 @@
                   </div>
                   <div class="d-flex mb-2">
                     <i class="bi bi-geo-alt text-primary me-2"></i>
-                    <p class="mb-0">#90/2, 13th Cross, 9th Main
-                      RR Nagar, Bengalore-98, India</p>
+                    <p class="mb-0">22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</p>
                   </div>
                   <div class="d-flex mb-2">
                     <i class="bi bi-envelope-open text-primary me-2"></i>
