--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <p class="hero-work">
                    Web & App Development - Data Science - AI & ML Solutions
                 </p>
-                <h2 class="hero-title Blanka-font">#COFFEE -> CODE;</h2>
+                <h2 class="hero-title Blanka-font">#COFFEE <span class="teko-font">-></span> CODE;</h2>
             
                 <a href="about.html" class="btn btn-main btn-lg ">About Us</a>
               </div>
