--- a/index.html
+++ b/index.html
@@ -726,6 +726,11 @@
             <span
               ><i class="bi bi-geo-alt-fill text-primary me-2 fa-lg"></i>22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</span
             >
+            
+            <span
+            > <i class="bi bi-geo-alt-fill text-primary me-2 fa-lg"></i>Branch 2</span
+            >C-3, NO 2.35/2, RATHOD VATIKA, 1ST STAGE, INDUSTRIAL SUBURB, YESHWANTHPUR, BANGALORE-560022.
+            
             <span><i class="fa fa-phone fa-lg"></i>+91 9606 75 2050</span>
             <span
               ><i class="fa fa-envelope text-primary me-2"></i>
@@ -781,6 +786,11 @@
                 <div class="d-flex mb-2">
                   <i class="bi bi-geo-alt text-primary me-2"></i>
                   <p class="mb-0">22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</p>
+                </div>
+                <div class="d-flex mb-2">
+                  <i class="bi bi-geo-alt text-primary me-2"></i>
+                  <p class="mb-0">Branch 2 <br>
+                    C-3, NO 2.35/2, RATHOD VATIKA, 1ST STAGE, INDUSTRIAL SUBURB, YESHWANTHPUR, BANGALORE-560022.</p>
                 </div>
                 <div class="d-flex mb-2">
                   <i class="bi bi-envelope-open text-primary me-2"></i>
