--- a/datascience.html
+++ b/datascience.html
@@ -392,7 +392,13 @@
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-geo-alt text-primary me-2"></i>
-                <p class="mb-0">22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</p>
+                <p class="mb-0"><span style="font-size: large; font-weight: 900;">Branch 1 </span> <br>
+                   22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</p>
+              </div>
+              <div class="d-flex mb-2">
+                <i class="bi bi-geo-alt text-primary me-2"></i>
+                <p class="mb-0"><span style="font-size: large; font-weight: 900;">Branch 2</span> <br>
+                  C-3, NO 2.35/2, RATHOD VATIKA, 1ST STAGE, INDUSTRIAL SUBURB, YESHWANTHPUR, BANGALORE-560022.</p>
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-envelope-open text-primary me-2"></i>
