--- a/index.html
+++ b/index.html
@@ -723,6 +723,16 @@
 
         <div class="col-md-4 animated" data-animate="fadeInRight">
           <address>
+            <div style="font-size: large ; font-weight: 800;"><span
+              ><i class="bi bi-geo-alt-fill text-primary me-2 fa-lg" ></i>Headquarters<br> </div> 
+              90/2-b, 13th Cross Rd, 9th Main Rd, Ideal Homes Layout, Rajarajeshwari Nagar, Bengaluru, Karnataka 560098.</span
+            > <br>
+            <br>
+            <div style="font-size: large ; font-weight: 800;"><span
+              ><i class="bi bi-geo-alt-fill text-primary me-2 fa-lg" ></i>Global Delivery Center<br> </div> 
+              No.745, 10th Main, 3rd Block, 3rd Stage Basaveshwara Nagar, Bangalore, Karnataka, India - 560079.</span
+            > <br>
+            <br>
            <div style="font-size: large ; font-weight: 800;"><span
               ><i class="bi bi-geo-alt-fill text-primary me-2 fa-lg" ></i> Branch 1 <br> </div> 
               
@@ -732,7 +742,7 @@
 
             <div style="font-size: large; font-weight: 800;"> <span
             > <i class="bi bi-geo-alt-fill text-primary me-2 fa-lg"></i>  Branch 2 </div></span
-            >C-3, NO 2.35/2, RATHOD VATIKA, 1ST STAGE, INDUSTRIAL SUBURB, YESHWANTHPUR, BANGALORE-560022.  <br>
+            >No.745, 10th Main, 3rd Block, 3rd Stage Basaveshwara Nagar, Bangalore, Karnataka, India - 560079.<br>
             <br>
             
             <span><i class="fa fa-phone fa-lg"></i>+91 9606 75 2050</span>
@@ -789,13 +799,23 @@
                 </div>
                 <div class="d-flex mb-2">
                   <i class="bi bi-geo-alt text-primary me-2"></i>
+                  <p class="mb-0"><span style="font-size: large; font-weight: 900;">Headquarters</span> <br>
+                    90/2-b, 13th Cross Rd, 9th Main Rd, Ideal Homes Layout, Rajarajeshwari Nagar, Bengaluru, Karnataka 560098.</p>
+                </div>
+                <div class="d-flex mb-2">
+                  <i class="bi bi-geo-alt text-primary me-2"></i>
+                  <p class="mb-0"><span style="font-size: large; font-weight: 900;">Global Delivery Center</span> <br>
+                    No.745, 10th Main, 3rd Block, 3rd Stage Basaveshwara Nagar, Bangalore, Karnataka, India - 560079.</p>
+                </div>
+                <div class="d-flex mb-2">
+                  <i class="bi bi-geo-alt text-primary me-2"></i>
                   <p class="mb-0"><span style="font-size: large; font-weight: 900;">Branch 1 </span> <br>
                      22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</p>
                 </div>
                 <div class="d-flex mb-2">
                   <i class="bi bi-geo-alt text-primary me-2"></i>
                   <p class="mb-0"><span style="font-size: large; font-weight: 900;">Branch 2</span> <br>
-                    C-3, NO 2.35/2, RATHOD VATIKA, 1ST STAGE, INDUSTRIAL SUBURB, YESHWANTHPUR, BANGALORE-560022.</p>
+                    No.745, 10th Main, 3rd Block, 3rd Stage Basaveshwara Nagar, Bangalore, Karnataka, India - 560079.</p>
                 </div>
                 <div class="d-flex mb-2">
                   <i class="bi bi-envelope-open text-primary me-2"></i>
