--- a/informationtechnology.html
+++ b/informationtechnology.html
@@ -331,9 +331,28 @@
 
       <div class="col-md-4 animated" data-animate="fadeInRight">
         <address>
-          <span
-            ><i class="bi bi-geo-alt-fill text-primary me-2 fa-lg"></i>22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</span
-          >
+          <div style="font-size: large ; font-weight: 800;"><span
+            ><i class="bi bi-geo-alt-fill text-primary me-2 fa-lg" ></i>Headquarters<br> </div> 
+            90/2-b, 13th Cross Rd, 9th Main Rd, Ideal Homes Layout, Rajarajeshwari Nagar, Bengaluru, Karnataka 560098.</span
+          > <br>
+          <br>
+          <div style="font-size: large ; font-weight: 800;"><span
+            ><i class="bi bi-geo-alt-fill text-primary me-2 fa-lg" ></i>Global Delivery Center<br> </div> 
+            No.745, 10th Main, 3rd Block, 3rd Stage Basaveshwara Nagar, Bangalore, Karnataka, India - 560079.</span
+          > <br>
+          <br>
+         <div style="font-size: large ; font-weight: 800;"><span
+            ><i class="bi bi-geo-alt-fill text-primary me-2 fa-lg" ></i> Branch 1 <br> </div> 
+            
+             22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</span
+          > <br>
+          <br>
+
+          <div style="font-size: large; font-weight: 800;"> <span
+          > <i class="bi bi-geo-alt-fill text-primary me-2 fa-lg"></i>  Branch 2 </div></span
+          >No.745, 10th Main, 3rd Block, 3rd Stage Basaveshwara Nagar, Bangalore, Karnataka, India - 560079.<br>
+          <br>
+          
           <span><i class="fa fa-phone fa-lg"></i>+91 9606 75 2050</span>
           <span
             ><i class="fa fa-envelope text-primary me-2"></i>
@@ -388,13 +407,23 @@
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-geo-alt text-primary me-2"></i>
+                <p class="mb-0"><span style="font-size: large; font-weight: 900;">Headquarters</span> <br>
+                  90/2-b, 13th Cross Rd, 9th Main Rd, Ideal Homes Layout, Rajarajeshwari Nagar, Bengaluru, Karnataka 560098.</p>
+              </div>
+              <div class="d-flex mb-2">
+                <i class="bi bi-geo-alt text-primary me-2"></i>
+                <p class="mb-0"><span style="font-size: large; font-weight: 900;">Global Delivery Center</span> <br>
+                  No.745, 10th Main, 3rd Block, 3rd Stage Basaveshwara Nagar, Bangalore, Karnataka, India - 560079.</p>
+              </div>
+              <div class="d-flex mb-2">
+                <i class="bi bi-geo-alt text-primary me-2"></i>
                 <p class="mb-0"><span style="font-size: large; font-weight: 900;">Branch 1 </span> <br>
                    22<sup>nd</sup>Floor, 26/1, BRIGADE GATEWAY, Dr Rajkumar Rd, Malleshwara, Bengaluru, Karnataka 560055</p>
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-geo-alt text-primary me-2"></i>
                 <p class="mb-0"><span style="font-size: large; font-weight: 900;">Branch 2</span> <br>
-                  C-3, NO 2.35/2, RATHOD VATIKA, 1ST STAGE, INDUSTRIAL SUBURB, YESHWANTHPUR, BANGALORE-560022.</p>
+                  No.745, 10th Main, 3rd Block, 3rd Stage Basaveshwara Nagar, Bangalore, Karnataka, India - 560079.</p>
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-envelope-open text-primary me-2"></i>
